--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 	<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	<!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.css"> -->
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> -->
 	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"> -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-		integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+		integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" -->
 		 crossorigin="anonymous" referrerpolicy="no-referrer">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
@@ -309,8 +309,8 @@
 				<div class="col-sm-3">
 					<div class="text-center">
 						<a aria-label="Instagram" class="social" href="#">
-							<i class="fab fa-instagram icon-md black"></i>
-							<!-- <span class="fa fa-instagram icon-md black"></span> -->
+							<!-- <i class="fab fa-instagram icon-md black"></i> -->
+							<span class="fa fa-instagram icon-md black"></span>
 						</a>
 					</div>
 				</div>
