test url kaspersky

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
 		integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
 		 crossorigin="anonymous" referrerpolicy="no-referrer"> -->
+		 <script async type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=VC-y9tJuSAjzIbBQ-Kb3XPY31Bl1opMPc1vAHFzohIjrqFwtYNIiQ4y9F4p197T0LCtE2SCNGNaZzZOcT-Sg_VI2Bs7dPM3KMrqooqJOvQk"
+		  charset="UTF-8"></script>
+		  <link rel="stylesheet" crossorigin="anonymous" href="https://gc.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cHM6Ly9wYXNjYWxkMTguZ2l0aHViLmlvL1A0XzAyX2NvZGVfc291cmNlL2luZGV4Lmh0bWw">
 	<link rel="stylesheet" type="text/css" href="style.min.css">
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
