--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<link rel="canonical" href="https://pascald18.github.io/P4_02_code_source/">
 	<meta name="robots" content="index, follow">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> -->
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap2.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap2.min.css"> -->
 	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"> -->
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.css"> -->
@@ -83,7 +83,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="Texte-entete">
-						<img src="img/logo.avif" class="center-block image-resize-mode" width="100"
+						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
 							alt="Logo 2 La chouette agence" />
 						<h1 class="text-center hero-bloc-text tc-yellow ">
 							La chouette agence.
