--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
 	<meta name="robots" content="index, follow">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> -->
-	<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap2.min.css"> -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	<!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.css"> -->
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-		integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-		 crossorigin="anonymous" referrerpolicy="no-referrer">
 	<link rel="stylesheet" type="text/css" href="style.min.css">
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
@@ -293,16 +289,16 @@
 				<div class="col-sm-3">
 					<div class="text-center">
 						<a aria-label="Facebook" class="social" href="#">
-							<i class="fab fa-facebook-f icon-md black"></i>
-							<!--<span class="fa fa-facebook icon-md black"></span> -->
+							<!-- <i class="fab fa-facebook-f icon-md black"></i> -->
+							<i class="fa fa-facebook icon-md black"></i>
 						</a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
 						<a aria-label="Sport" class="social" href="#">
-							<i class="fas fa-basketball-ball icon-md black"></i>
-							<!-- <span class="fa fa-dribbble icon-md black"></span> -->
+							<!-- <i class="fas fa-basketball-ball icon-md black"></i> -->
+							<i class="fa fa-dribbble icon-md black"></i>
 						</a>
 					</div>
 				</div>
