bootstrap / fontawesome en local

--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
 				<div class="col-sm-3">
 					<div class="text-center">
 						<a aria-label="Twitter" class="social" href="#">
-							<i class="fas fa-dove icon-md black"></i>
-							<!-- <span class="fa fa-twitter icon-md black"></span> -->
+							<!-- <i class="fas fa-dove icon-md black"></i> -->
+							<i class="fa fa-twitter icon-md black"></i> -->
 						</a>
 					</div>
 				</div>
@@ -306,7 +306,7 @@
 					<div class="text-center">
 						<a aria-label="Instagram" class="social" href="#">
 							<!-- <i class="fab fa-instagram icon-md black"></i> -->
-							<span class="fa fa-instagram icon-md black"></span>
+							<i class="fa fa-instagram icon-md black"></i>
 						</a>
 					</div>
 				</div>
