bootstrap / fontawesome en cdn

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<link rel="canonical" href="https://pascald18.github.io/P4_02_code_source/">
 	<meta name="robots" content="index, follow">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.css"> -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="style.min.css">
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
@@ -281,32 +281,32 @@
 				<div class="col-sm-3">
 					<div class="text-center">
 						<a aria-label="Twitter" class="social" href="#">
-							<!-- <i class="fas fa-dove icon-md black"></i> -->
-							<i class="fa fa-twitter icon-md black"></i> -->
+							<i class="fas fa-dove icon-md black"></i>
+							<!-- <i class="fa fa-twitter icon-md black"></i> -->
 						</a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
 						<a aria-label="Facebook" class="social" href="#">
-							<!-- <i class="fab fa-facebook-f icon-md black"></i> -->
-							<i class="fa fa-facebook icon-md black"></i>
+							<i class="fab fa-facebook-f icon-md black"></i>
+							<!-- <i class="fa fa-facebook icon-md black"></i> -->
 						</a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
 						<a aria-label="Sport" class="social" href="#">
-							<!-- <i class="fas fa-basketball-ball icon-md black"></i> -->
-							<i class="fa fa-dribbble icon-md black"></i>
+							<i class="fas fa-basketball-ball icon-md black"></i>
+							<!-- <i class="fa fa-dribbble icon-md black"></i> -->
 						</a>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="text-center">
 						<a aria-label="Instagram" class="social" href="#">
-							<!-- <i class="fab fa-instagram icon-md black"></i> -->
-							<i class="fa fa-instagram icon-md black"></i>
+							<i class="fab fa-instagram icon-md black"></i>
+							<!-- <i class="fa fa-instagram icon-md black"></i> -->
 						</a>
 					</div>
 				</div>
