--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="style.min.css">
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
-	<script src="./js/jquery-2.1.0.min.js" defer></script>
-	<script src="./js/bootstrap.min.js" defer></script>
-	<script src="./js/blocs.js" defer></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/jqBootstrapValidation.js" defer></script>
-	<script src="./js/gmaps.min.js" defer></script>
+	<script async src="./js/jquery-2.1.0.min.js" defer></script>
+	<script async src="./js/bootstrap.min.js" defer></script>
+	<script async src="./js/blocs.js" defer></script>
+	<script async src="./js/jquery.touchSwipe.js" defer></script>
+	<script async src="./js/jqBootstrapValidation.js" defer></script>
+	<script async src="./js/gmaps.min.js" defer></script>
 
 
 
