--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-	<link rel="stylesheet" type="text/css" href="style.min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 	<script async src="./js/jquery-2.1.0.min.js" defer></script>
 	<script async src="./js/bootstrap.min.js" defer></script>
@@ -78,7 +78,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="Texte-entete">
-						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
+						<img src="img/logo.avif" class="center-block image-resize-mode" width="100"
 							alt="Logo 2 La chouette agence" />
 						<h1 class="text-center hero-bloc-text tc-yellow ">
 							La chouette agence.
