--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 	<!-- Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9Y72RJJZQ6"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9Y72RJJZQ6" defer></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
