--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 	<link rel="canonical" href="https://pascald18.github.io/P4_02_code_source/">
 	<meta name="robots" content="index, follow">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"> -->
+	<!--<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
-	<script async src="./js/jquery-2.1.0.min.js" defer></script>
-	<script async src="./js/bootstrap.min.js" defer></script>
-	<script async src="./js/blocs.js" defer></script>
-	<script async src="./js/jquery.touchSwipe.js" defer></script>
-	<script async src="./js/jqBootstrapValidation.js" defer></script>
-	<script async src="./js/gmaps.min.js" defer></script>
+	<script async src="./js/jquery-2.1.0.min.js"></script>
+	<script async src="./js/bootstrap.min.js"></script>
+	<script async src="./js/blocs.js"></script>
+	<script async src="./js/jquery.touchSwipe.js"></script>
+	<script async src="./js/jqBootstrapValidation.js"></script>
+	<script async src="./js/gmaps.min.js"></script>
 
 
 
 	<!-- Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9Y72RJJZQ6" defer></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9Y72RJJZQ6"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
