suppression bg-presentation

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			id="bloc-1-hero">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
-					<div class="Texte-entete">
+					<div class="texte-entete">
 						<img src="img/logo.avif" class="center-block image-resize-mode" width="100"
 							alt="Logo 2 La chouette agence" />
 						<h1 class="text-center hero-bloc-text tc-yellow ">
@@ -157,7 +157,7 @@
 
 		<!-- bloc-3-what-i-do -->
 		<section
-			class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
+			class="bloc tc-white bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper b-parallax"
 			id="bloc-3-what-i-do">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
@@ -256,7 +256,7 @@
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
 				<div class="row">
-					<h2 class="text-center Texte-entete">
+					<h2 class="text-center texte-entete">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<nav class="text-center">
