--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script src="./js/bootstrap.min.js" defer></script>
 	<script src="./js/blocs.js" defer></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/jqBootstrapValidation.js" defer></script>
+	<!-- <script src="./js/jqBootstrapValidation.js" defer></script> -->
 	<script src="./js/gmaps.min.js" defer></script>
 
 
