--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-	<link rel="stylesheet" type="text/css" href="style.min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
 	<script src="./js/bootstrap.min.js" defer></script>
@@ -77,13 +77,12 @@
 			id="bloc-1-hero">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
-					<div class="texte-entete">
+					<div class="black-background">
 						<img src="img/logo.avif" class="center-block image-resize-mode" width="100"
 							alt="Logo 2 La chouette agence" />
-						<h1 class="text-center hero-bloc-text tc-yellow ">
+						<h1 class="text-center hero-bloc-text tc-yellow">
 							La chouette agence.
 						</h1>
-
 					</div>
 					<nav class="text-center">
 						<a aria-label="Formulaire de" href="contacts-webdesign.html" title="Formulaire de contact"
@@ -254,9 +253,9 @@
 
 		<!-- bloc-5-cta -->
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
-			<div class="container bloc-lg">
+			<!-- <div class="container bloc-lg"> -->
 				<div class="row">
-					<h2 class="text-center texte-entete">
+					<h2 class="text-center black-background">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<nav class="text-center">
@@ -265,7 +264,7 @@
 							class="btn btn-lg btn-clean btn-rd btn-atomic-tangerine	cta-hero-btn">Contact</a>
 					</nav>
 				</div>
-			</div>
+			<!-- </div> -->
 		</div>
 		<!-- bloc-5-cta END -->
 	</main>
