--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 			class="bloc tc-white bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper b-parallax"
 			id="bloc-3-what-i-do">
 			<div class="container bloc-lg">
-				<div class="row tight-width-whitespace black-background">
-					<div class="col-sm-12">
+				<div class="row tight-width-whitespace">
+					<div class="black-background">
 						<h2 class="text-center tc-yellow">
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
 							le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients
