--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="canonical" href="https://pascald18.github.io/P4_02_code_source/">
 	<meta name="robots" content="index, follow">
-	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
 	<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
