Suppression des liens footer incorrects

--- a/index.html
+++ b/index.html
@@ -309,7 +309,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
+			<!-- supression des adresses avec liens incorrects -->
+			<!-- <div class="row">
 				<nav class="col-sm-4 black-20-g">
 					Partenaires
 					<ul class="black-20">
@@ -347,7 +348,7 @@
 						<li><a href="#">vraiseofiable.com</a></li>
 					</ul>
 				</nav>
-			</div>
+			</div> -->
 			<!-- </div> -->
 			<!-- </div> -->
 			<!-- Footer - bloc-8 END -->
