--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-	<link rel="stylesheet" type="text/css" href="style.min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Chouette agence - Entreprise de développement web à lyon.</title>
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
 	<script src="./js/bootstrap.min.js" defer></script>
@@ -108,7 +108,7 @@
 					<h2 class="text-center">
 						Web design
 					</h2>
-					<h3 class="text-center ">
+					<h3 tabindex="0" class="text-center para-def">
 						Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de
 						zéro, laissez-nous vous réaliser un design dont vous serez fier.
 					</h3>
@@ -120,7 +120,7 @@
 					<h2 class="text-center">
 						Stratégie
 					</h2>
-					<h3 class="text-center ">
+					<h3 tabindex="0" class="text-center para-def">
 						Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre
 						vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 					</h3>
@@ -132,7 +132,7 @@
 					<h2 class="text-center">
 						Illustrations
 					</h2>
-					<h3 class="text-center ">
+					<h3 tabindex="0" class="text-center para-def">
 						Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
 						graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 					</h3>
@@ -160,7 +160,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="black-background">
-						<h2 class="text-center tc-yellow">
+						<h2 tabindex="0" class="text-center tc-yellow para-def">
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître
 							le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients
 							.
