--- Auto-Git Commit ---

--- a/contacts-webdesign.html
+++ b/contacts-webdesign.html
@@ -3,10 +3,10 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords"
-		content="sites web, agence design lyon, front end développeur, entreprise lyon,développeur web,entreprise développement web,création site web,chouette agence,web design">
+	<meta name="keywords" content="">
 	<meta name="description"
-		content="Entreprise de design et développement site web à Lyon.Création de site internet.Une équipe d'experts pour vous assister et vous aider à votre réferecement.">
+		content="Entreprise de design et développement site web à Lyon.Une équipe d'experts
+		 pour vous assister en stratégie et illustrations pour vous aider à votre réferecement.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="canonical" href="https://pascald18.github.io/P4_02_code_source/">
 	<meta name="robots" content="index, follow">
@@ -31,7 +31,6 @@
 		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
-
 		gtag('config', 'G-9Y72RJJZQ6');
 	</script>
 	<!-- Analytics END -->
